Put style tag in head (oops)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html lang="en">
-<style type="text/css">
-    input.error {
-        border: thin solid red;
-    }
-</style>
+    <head>
+        <style type="text/css">
+            input.error {
+                border: thin solid red;
+            }
+        </style>
+    </head>
     <body>
         <form class="contact" method="POST" data-netlify="true">
             <p>
